<resources>
    <string name="app_name">Mageiras</string>
    <string name="invalid_email">Email does not match</string>
    <string name="pass_less_than_8_char">Password must not be less than 8 characters</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="start_now">Start</string>
    <string name="desc_4">Snap a picture of your fridge contents. Explore our curated recipe collection. Start cooking like a pro!</string>
    <string name="title_4">Let\'s get started!</string>
    <string name="desc_3">Craving something delicious? Based on what\'s already in your smart fridge, Mageiras will suggest personalized recipes that are guaranteed to tantalize your taste buds.</string>
    <string name="title_3">Recipes Tailored to You</string>
    <string name="desc_2">Tell Mageiras what\'s in your fridge, and we\'ll keep track of it all. Expiration dates? We got you covered. Running low on something? We\'ll let you know!</string>
    <string name="title_2">Your Smart Fridge</string>
    <string name="desc_1">Say goodbye to tedious recipe searches! Just take a picture of your ingredients with our powerful image recognition, and we\'ll identify them in a flash.</string>
    <string name="title_1">Snap &amp; Detect</string>
    <string name="skip_this"><![CDATA[Skip This >]]></string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="your_username">Your Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="menu_home">Home</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_recipe">Recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_make_your_own_food">Let’s make your own food</string>
    <string name="put_in_the_fridge">Put in the Fridge</string>
    <string name="is_this_really_the_ingredient">Is this really the ingredient?</string>
    <string name="splashscreen">Splashscreen</string>
    <string name="user_s_profile_picture">User\'s profile picture</string>
    <string name="settings">Settings</string>
    <string name="username_placeholder">Username</string>
    <string name="recommended_recipe">Recommended Recipe</string>
    <string name="what_is_inside_your_refrigerator">What is inside your Refrigerator?</string>
    <string name="recipes_name">Recipes name</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="recipes_card_picture">Recipes Card Picture</string>
    <string name="logout">Logout</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="amount">amount</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="no_result_found">No result found</string>
    <string name="empty_image_warning">Catch image first</string>
    <string name="your_recommended_recipes">Your Recommended Recipes</string>
    <string name="string_title_4">New Discover</string>
    <string name="genre">Genre</string>
    <string name="tab_text_ingredient">Ingredients</string>
    <string name="tab_text_steps">Steps</string>
    <string name="title">title</string>
    <string name="placeholder_ingredients_amount">6 item</string>
    <string name="ingredients_amount">%s ingredients</string>
    <string name="steps_amount">%s steps</string>
    <string name="placeholder_step_description">Step Description</string>
    <string name="steps_placeholder">3 Steps</string>
    <string name="no_ingredient_text">No ingredient here, Scan it</string>

</resources>