<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_card"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/header_bottom"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintTop_toTopOf="@+id/top_margin">

            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="49dp"
                android:layout_height="0dp"
                android:contentDescription="@string/user_s_profile_picture"
                android:src="@drawable/baseline_circle_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxWidth="100dp"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/username_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_picture"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_card"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/header_bottom"
            app:layout_constraintEnd_toStartOf="@+id/right_margin"
            app:layout_constraintTop_toTopOf="@+id/top_margin">

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_settings_24"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/settings"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/header_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="82dp" />

        <LinearLayout
            android:id="@+id/recommended_recipes_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/recommended_recipes_bottom"
            app:layout_constraintEnd_toStartOf="@+id/right_margin"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintTop_toTopOf="@+id/header_bottom">

            <TextView
                android:id="@+id/tv_recommended_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommended_recipe"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carousel_rv_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/recommended_recipes_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="250dp" />

        <LinearLayout
            android:id="@+id/ingredients_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ingredients_card_bottom"
            app:layout_constraintEnd_toStartOf="@+id/right_margin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/left_margin"
            app:layout_constraintTop_toTopOf="@+id/recommended_recipes_bottom">

            <TextView
                android:id="@+id/what_inside_refri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_inside_your_refrigerator"
                android:textStyle="bold"/>

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/rv_ingredients"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent" />-->
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ingredients_card_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="64dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>